# EnergyDiff-pub

./: pyproject.toml
configs/: optima_lcl_gpt2_nano.yaml
scripts/python/sampling/: sample_ddpm_conditional.py
scripts/python/training/: kernel_rectified_flow.py  train_ddpm_conditional.py
src/energydiff/diffusion/: diffusion_1d.py
src/energydiff/utils/: __init__.py  argument_parser.py  configuration.py  initializer.py  runtime.py
